--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,9 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
 .main {
-  min-height: 100vh;
+  min-height: 100%;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -113,4 +113,4 @@
     width: 100%;
     flex-direction: column;
   }
-}
+} */
